Add on_resize and canvas.show()

--- a/online_backend/ipython/ipynb_vnc_ex1.ipynb
+++ b/online_backend/ipython/ipynb_vnc_ex1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f5af7be3b4922ef0e05972f8c6017288da0bc6e4003159095cb141913693dad8"
+  "signature": "sha256:2e1395c444213c39bee15b2041ba601fda0cb9bdbb4f2a5e5ffbff1dfe441c5c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -60,20 +60,24 @@
       "        self.app.process_events()\n",
       "        \n",
       "    def on_mouse_release(self, event):\n",
-      "        print event.pos, event.modifiers\n",
-      "        \n",
+      "        print \"Pos, modifiers: \", event.pos, event.modifiers\n",
+      "    \n",
+      "    # WORKS\n",
       "    #def on_mouse_move(self, event):\n",
       "        #print event.pos\n",
       "        \n",
-      "    #def on_mouse_wheel(self, event):\n",
-      "        # Isn't working yet\n",
-      "        #print event.delta\n",
+      "    def on_mouse_wheel(self, event):\n",
+      "        print \"Delta: \", event.delta\n",
       "        \n",
       "    def on_key_press(self, event):\n",
-      "        print event.key, event.modifiers\n",
-      "        \n",
+      "        print \"Key, modifiers: \", event.key, event.modifiers\n",
+      "    \n",
+      "    # WORKS\n",
       "    #def on_key_release(self, event):\n",
-      "        #print event.key, event.modifiers"
+      "        #print event.key, event.modifiers\n",
+      "        \n",
+      "    def on_resize(self, event):\n",
+      "        print \"New size: \", event.size"
      ],
      "language": "python",
      "metadata": {},
@@ -83,7 +87,39 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "c = Vispynb()  # Click on empty canvas"
+      "c = Vispynb(size=(300,300))\n",
+      "print c.size"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "c.size = (500, 400)\n",
+      "print c.size"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "c.show() # Click on empty canvas"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "c.size = (600,500)"
      ],
      "language": "python",
      "metadata": {},
