--- a/online_backend/ipython/static/base.ipynb
+++ b/online_backend/ipython/static/base.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d31a3b0529d2428697565b527dbb9856652ea60071c9db6d7cd3a53fc3635360"
+  "signature": "sha256:60d6b285a6bc57e883e1d614c55667ed7414e227777a66ebde3939da1193adee"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,6 +14,11 @@
      "input": [
       "%%javascript\n",
       "\n",
+      "function get_pos(c, e) {\n",
+      "    var rect = c.getBoundingClientRect();\n",
+      "    return [e.clientX-rect.left, e.clientY-rect.top];\n",
+      "};\n",
+      "\n",
       "function get_modifiers(e) {\n",
       "    var modifiers = [];\n",
       "    if (e.altKey) modifiers.push(\"alt\");\n",
@@ -23,9 +28,25 @@
       "    return modifiers;\n",
       "};\n",
       "\n",
+      "function get_key(e){\n",
+      "    var keynum = null;\n",
+      "    if(window.event){ // IE\n",
+      "        keynum = e.keyCode;\n",
+      "    }\n",
+      "    else if(e.which){ // Netscape/Firefox/Opera\n",
+      "        keynum = e.which;\n",
+      "     }\n",
+      "    return keynum;\n",
+      "};\n",
+      "\n",
       "function gen_mouse_event(c, e, type) {\n",
-      "    var rect = c.getBoundingClientRect();\n",
+      "    if (c._eventinfo.is_button_pressed)\n",
+      "        var button = e.button;\n",
+      "    else\n",
+      "        button = null;\n",
+      "    var pos = get_pos(c, e);\n",
       "    var modifiers = get_modifiers(e);\n",
+      "    var press_event = c._eventinfo.press_event;\n",
       "    var event = {\n",
       "        \"source\": \"browser\",\n",
       "        \"event\":\n",
@@ -35,10 +56,12 @@
       "            \"properties\":\n",
       "            {\n",
       "                \"type\": type,\n",
-      "                \"pos\": [e.clientX-rect.left, e.clientY-rect.top],\n",
-      "                \"button\": e.button | null,\n",
-      "                \"delta\": null,\n",
+      "                \"pos\": pos,\n",
+      "                \"button\": e.button,\n",
+      "                \"is_dragging\": press_event != null,\n",
       "                \"modifiers\": modifiers,\n",
+      "                \"press_event\": press_event,\n",
+      "                \"delta\": null,\n",
       "            }\n",
       "        }\n",
       "    };\n",
@@ -46,6 +69,7 @@
       "};\n",
       "\n",
       "function gen_key_event(c, e, type){\n",
+      "    var modifiers = get_modifiers(e);\n",
       "    var event = {\n",
       "        \"source\": \"browser\",\n",
       "        \"event\":\n",
@@ -55,7 +79,8 @@
       "            \"properties\":\n",
       "            {\n",
       "                \"type\": type,\n",
-      "                \"key\": e.which,\n",
+      "                \"key\": get_key(e),\n",
+      "                \"modifiers\": modifiers,\n",
       "            }\n",
       "        }\n",
       "    };\n",
@@ -67,10 +92,25 @@
       "        render: function(){\n",
       "            this.$canvas = $('<canvas />')\n",
       "                .attr('id', 'canvas')\n",
-      "                .attr('width', '500')\n",
-      "                .attr('height', '500')\n",
       "                .attr('tabindex', '1')\n",
       "                .appendTo(this.$el);\n",
+      "            \n",
+      "            this.c = this.$canvas[0];\n",
+      "            this.c.width = this.model.get(\"width\");\n",
+      "            this.c.height = this.model.get(\"height\");\n",
+      "            this.canvas2d = this.c.getContext('2d');\n",
+      "            \n",
+      "            this.c._eventinfo = {\n",
+      "                'type': null,\n",
+      "                'pos': null,\n",
+      "                'button': null,\n",
+      "                'is_dragging': null,\n",
+      "                'key': null,\n",
+      "                'modifiers': [],\n",
+      "                'press_event': null,\n",
+      "                'delta': null,\n",
+      "                'is_button_pressed': 0,\n",
+      "            };\n",
       "        },\n",
       "        \n",
       "        events: {\n",
@@ -80,47 +120,53 @@
       "            'mousewheel': 'mouse_wheel',\n",
       "            'keydown': 'key_press',\n",
       "            'keyup': 'key_release',\n",
-      "            \n",
       "        },\n",
       "        \n",
       "        mouse_move: function(e) {\n",
-      "            var event = gen_mouse_event(this.$canvas[0], e, \"mouse_move\");\n",
+      "            var event = gen_mouse_event(this.c, e, \"mouse_move\");\n",
       "            this.send(event);\n",
       "        },\n",
       "        \n",
       "        mouse_press: function(e) {\n",
-      "            var event = gen_mouse_event(this.$canvas[0], e, \"mouse_press\");\n",
+      "            ++this.c._eventinfo.is_button_pressed;\n",
+      "            var event = gen_mouse_event(this.c, e, \"mouse_press\");\n",
+      "            this.c._eventinfo.press_event = event;\n",
       "            this.send(event);\n",
       "        },\n",
       "        \n",
       "        mouse_release: function(e) {\n",
-      "            var event = gen_mouse_event(this.$canvas[0], e, \"mouse_release\");\n",
+      "            --this.c._eventinfo.is_button_pressed;\n",
+      "            var event = gen_mouse_event(this.c, e, \"mouse_release\");\n",
+      "            this.c._eventinfo.press_event = null;\n",
       "            this.send(event);\n",
       "        },\n",
       "        \n",
       "        mouse_wheel: function(e) {\n",
-      "            var event = gen_mouse_event(this.$canvas[0], e, \"mouse_wheel\");\n",
-      "            event.events[0].properties.delta = [e.wheelDeltaX / 100., e.wheelDeltaY / 100.];\n",
+      "            var event = gen_mouse_event(this.c, e, \"mouse_wheel\");\n",
+      "            event.event.properties.delta = e.wheelDelta;\n",
       "            this.send(event);\n",
+      "            e.preventDefault()\n",
       "        },\n",
       "            \n",
       "        key_press: function(e) {\n",
-      "            var event = gen_key_event(this.$canvas[0], e, \"key_press\");\n",
+      "            var event = gen_key_event(this.c, e, \"key_press\");\n",
       "            this.send(event);\n",
       "        },\n",
       "            \n",
       "        key_release: function(e) {\n",
-      "            var event = gen_key_event(this.$canvas[0], e, \"key_release\");\n",
+      "            var event = gen_key_event(this.c, e, \"key_release\");\n",
       "            this.send(event);\n",
       "        },\n",
+      "    \n",
       "        \n",
       "        // Update, whenever value attribute of our widget changes\n",
       "        update : function(){\n",
-      "            var canvas2d = this.$canvas[0].getContext('2d');\n",
+      "            this.c.width = this.model.get(\"width\");\n",
+      "            this.c.height = this.model.get(\"height\");\n",
+      "            var img_str = this.model.get(\"value\");\n",
       "            var img = new Image();\n",
-      "            var istr = this.model.get(\"value\");\n",
-      "            img.src = \"data:image/png;base64,\" + istr;\n",
-      "            canvas2d.drawImage(img, 0, 0);\n",
+      "            img.src = \"data:image/png;base64,\" + img_str;\n",
+      "            this.canvas2d.drawImage(img, 0, 0);\n",
       "        },\n",
       "    })\n",
       "    WidgetManager.register_widget_view(\"Widget\", Widget);\n",
@@ -128,7 +174,147 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "javascript": [
+        "\n",
+        "function get_pos(c, e) {\n",
+        "    var rect = c.getBoundingClientRect();\n",
+        "    return [e.clientX-rect.left, e.clientY-rect.top];\n",
+        "};\n",
+        "\n",
+        "function get_key(e){\n",
+        "    var keynum = null;\n",
+        "    if(window.event){ // IE\n",
+        "        keynum = e.keyCode;\n",
+        "    }\n",
+        "    else if(e.which){ // Netscape/Firefox/Opera\n",
+        "            keynum = e.which;\n",
+        "         }\n",
+        "    return keynum;\n",
+        "};\n",
+        "\n",
+        "function get_modifiers(e) {\n",
+        "    var modifiers = [];\n",
+        "    if (e.altKey) modifiers.push(\"alt\");\n",
+        "    if (e.ctrlKey) modifiers.push(\"ctrl\");\n",
+        "    if (e.metaKey) modifiers.push(\"meta\");\n",
+        "    if (e.shiftKey) modifiers.push(\"shift\");\n",
+        "    return modifiers;\n",
+        "};\n",
+        "\n",
+        "function gen_mouse_event(c, e, type) {\n",
+        "    var modifiers = get_modifiers(e);\n",
+        "    var event = {\n",
+        "        \"source\": \"browser\",\n",
+        "        \"event\":\n",
+        "        // Mouse Event\n",
+        "        {\n",
+        "            \"name\": \"MouseEvent\",\n",
+        "            \"properties\":\n",
+        "            {\n",
+        "                \"type\": type,\n",
+        "                \"pos\": get_pos(c, e),\n",
+        "                \"button\": e.button,\n",
+        "                \"delta\": null,\n",
+        "                \"modifiers\": modifiers,\n",
+        "            }\n",
+        "        }\n",
+        "    };\n",
+        "    return event;\n",
+        "};\n",
+        "\n",
+        "function gen_key_event(c, e, type){\n",
+        "    var event = {\n",
+        "        \"source\": \"browser\",\n",
+        "        \"event\":\n",
+        "        // Key Event\n",
+        "        {\n",
+        "            \"name\": \"KeyEvent\",\n",
+        "            \"properties\":\n",
+        "            {\n",
+        "                \"type\": type,\n",
+        "                \"key\":get_key(e),\n",
+        "            }\n",
+        "        }\n",
+        "    };\n",
+        "    return event;\n",
+        "};\n",
+        "\n",
+        "require([\"widgets/js/widget\"], function(WidgetManager){\n",
+        "    var Widget = IPython.DOMWidgetView.extend({\n",
+        "        render: function(){\n",
+        "            this.$canvas = $('<canvas />')\n",
+        "                .attr('id', 'canvas')\n",
+        "                .attr('width', '500')\n",
+        "                .attr('height', '500')\n",
+        "                .attr('tabindex', '1')\n",
+        "                .appendTo(this.$el);\n",
+        "        },\n",
+        "        \n",
+        "        events: {\n",
+        "            'mousemove': 'mouse_move',\n",
+        "            'mousedown': 'mouse_press',\n",
+        "            'mouseup': 'mouse_release',\n",
+        "            'mousewheel': 'mouse_wheel',\n",
+        "            'keydown': 'key_press',\n",
+        "            'keyup': 'key_release',\n",
+        "            \n",
+        "        },\n",
+        "        \n",
+        "        mouse_move: function(e) {\n",
+        "            var event = gen_mouse_event(this.$canvas[0], e, \"mouse_move\");\n",
+        "            this.send(event);\n",
+        "        },\n",
+        "        \n",
+        "        mouse_press: function(e) {\n",
+        "            var event = gen_mouse_event(this.$canvas[0], e, \"mouse_press\");\n",
+        "            this.send(event);\n",
+        "        },\n",
+        "        \n",
+        "        mouse_release: function(e) {\n",
+        "            var event = gen_mouse_event(this.$canvas[0], e, \"mouse_release\");\n",
+        "            this.send(event);\n",
+        "        },\n",
+        "        \n",
+        "        mouse_wheel: function(e) {\n",
+        "            alert(e.wheelDeltaY)\n",
+        "            //var event = gen_mouse_event(this.$canvas[0], e, \"mouse_wheel\");\n",
+        "            //event.event.properties.delta = e.wheelDelta;\n",
+        "            //this.send(event);\n",
+        "            //e.preventDefault()\n",
+        "        },\n",
+        "            \n",
+        "        key_press: function(e) {\n",
+        "            var event = gen_key_event(this.$canvas[0], e, \"key_press\");\n",
+        "            this.send(event);\n",
+        "        },\n",
+        "            \n",
+        "        key_release: function(e) {\n",
+        "            var event = gen_key_event(this.$canvas[0], e, \"key_release\");\n",
+        "            this.send(event);\n",
+        "        },\n",
+        "        \n",
+        "        // Update, whenever value attribute of our widget changes\n",
+        "        update : function(){\n",
+        "            var canvas2d = this.$canvas[0].getContext('2d');\n",
+        "            var img = new Image();\n",
+        "            var istr = this.model.get(\"value\");\n",
+        "            img.src = \"data:image/png;base64,\" + istr;\n",
+        "            canvas2d.drawImage(img, 0, 0);\n",
+        "        },\n",
+        "    })\n",
+        "    WidgetManager.register_widget_view(\"Widget\", Widget);\n",
+        "});"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.Javascript object>"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
