--- a/online_backend/ipython/static/base.ipynb
+++ b/online_backend/ipython/static/base.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:60d6b285a6bc57e883e1d614c55667ed7414e227777a66ebde3939da1193adee"
+  "signature": "sha256:5b454f74480a84bc3da852b02997ed827779a8289c6b58024b70e47772fbe3f8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -108,7 +108,7 @@
       "                'key': null,\n",
       "                'modifiers': [],\n",
       "                'press_event': null,\n",
-      "                'delta': null,\n",
+      "                'delta': [],\n",
       "                'is_button_pressed': 0,\n",
       "            };\n",
       "        },\n",
@@ -143,7 +143,8 @@
       "        \n",
       "        mouse_wheel: function(e) {\n",
       "            var event = gen_mouse_event(this.c, e, \"mouse_wheel\");\n",
-      "            event.event.properties.delta = e.wheelDelta;\n",
+      "            var delta = [e.originalEvent.wheelDeltaX/120, e.originalEvent.wheelDeltaY/120];\n",
+      "            event.event.properties.delta = delta;\n",
       "            this.send(event);\n",
       "            e.preventDefault()\n",
       "        },\n",
