Add mandelbrot example, update dragging event

--- a/online_backend/ipython/static/base.ipynb
+++ b/online_backend/ipython/static/base.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5b454f74480a84bc3da852b02997ed827779a8289c6b58024b70e47772fbe3f8"
+  "signature": "sha256:f0186ec27c4d756211e97078ff4a13779b4762464daaf4562cdf6c06de576d15"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -110,6 +110,7 @@
       "                'press_event': null,\n",
       "                'delta': [],\n",
       "                'is_button_pressed': 0,\n",
+      "                'last_pos': [-1, -1],\n",
       "            };\n",
       "        },\n",
       "        \n",
@@ -124,7 +125,11 @@
       "        \n",
       "        mouse_move: function(e) {\n",
       "            var event = gen_mouse_event(this.c, e, \"mouse_move\");\n",
-      "            this.send(event);\n",
+      "            var pos = event.event.properties.pos;\n",
+      "            var last_pos = this.c._eventinfo.last_pos;\n",
+      "            if(pos[0] != last_pos[0] || pos[1] != last_pos[1])\n",
+      "                this.send(event);\n",
+      "            this.c._eventinfo.last_pos = pos;\n",
       "        },\n",
       "        \n",
       "        mouse_press: function(e) {\n",
