Update examples according to last commit in ipynb-vnc https://github.com/mfkaptan/vispy/commit/f3e45987a5d339ac5c81097545f03114d7562175

--- a/online_backend/ipython/ipynb_vnc_ex2.ipynb
+++ b/online_backend/ipython/ipynb_vnc_ex2.ipynb
@@ -1,23 +1,13 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ad636c61473ca79a705b103828cdccd8fde1d5665d5bef56de8d8f731c81376b"
+  "signature": "sha256:bddd406b593c2748252f241f694721c745460bfae7a35e26140f198d19bf8eb6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from static import base"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -246,6 +236,14 @@
      "input": [
       "m.close()"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
